Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Thủ tướng lập Ban chỉ đạo sắp xếp đơn vị hành chính các cấp",
+    "content": "Thủ tướng Phạm Minh Chính đã thành lập Ban chỉ đạo sắp xếp tổ chức lại đơn vị hành chính các cấp, với Phó thủ tướng Nguyễn Hòa Bình làm Trưởng ban. Ban chỉ đạo sẽ nghiên cứu và chỉ đạo việc sắp xếp các đơn vị hành chính, đồng thời phối hợp giải quyết các vấn đề liên ngành liên quan. Bộ Nội vụ sẽ tham mưu và trình các luật sửa đổi cần thiết nhằm thực hiện việc sắp xếp này, đảm bảo tiến độ và chất lượng của đề án.",
+    "link": "https://vnexpress.net/thu-tuong-lap-ban-chi-dao-sap-xep-don-vi-hanh-chinh-cac-cap-4860481.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Ban chỉ đạo sắp xếp đơn vị hành chính các cấp do ai làm Trưởng ban?",
+    "answers": [
+      {
+        "text": "Phó thủ tướng Nguyễn Hòa Bình",
+        "correct": true
+      },
+      {
+        "text": "Bộ trưởng Nội vụ Phạm Thị Thanh Trà",
+        "correct": false
+      },
+      {
+        "text": "Thủ tướng Phạm Minh Chính",
+        "correct": false
+      },
+      {
+        "text": "Bộ trưởng, Chủ nhiệm Văn phòng Chính phủ Trần Văn Sơn",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nhiều thương hiệu gỡ hình ảnh của Kim Soo Hyun sau loạt tình tiết chấn động",
     "content": "Sau loạt thông tin gây chấn động về đời tư của Kim Soo Hyun, nhiều thương hiệu đã gỡ hình ảnh của nam diễn viên khỏi trang web và mạng xã hội của họ. Trước ồn ào tình ái, Kim Soo Hyun là gương mặt đại diện cho nhiều thương hiệu nổi tiếng tại châu Á. Hậu quả của thông tin này đã dẫn đến hàng nghìn người hâm mộ hủy theo dõi tài khoản cá nhân của anh trên Instagram và yêu cầu anh rời khỏi các chương trình truyền hình.",
     "link": "https://dantri.com.vn/giai-tri/nhieu-thuong-hieu-go-hinh-anh-cua-kim-soo-hyun-sau-loat-tinh-tiet-chan-dong-20250312163859667.htm",
@@ -1202,33 +1229,6 @@
     ]
   },
   {
-    "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
-    "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
-    "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Làm thế nào để dự báo nguy cơ sinh non và giữ thai nhi khỏe mạnh?",
-    "answers": [
-      {
-        "text": "Sử dụng xét nghiệm PartoSure để đánh giá nguy cơ sinh non.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần nghỉ ngơi nhiều hơn khi mang thai.",
-        "correct": false
-      },
-      {
-        "text": "Uống vitamin để cải thiện sức khỏe thai nhi.",
-        "correct": false
-      },
-      {
-        "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
     "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
     "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
@@ -1278,6 +1278,33 @@
       },
       {
         "text": "Học tiếng Việt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
+    "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
+    "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Làm thế nào để dự báo nguy cơ sinh non và giữ thai nhi khỏe mạnh?",
+    "answers": [
+      {
+        "text": "Sử dụng xét nghiệm PartoSure để đánh giá nguy cơ sinh non.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần nghỉ ngơi nhiều hơn khi mang thai.",
+        "correct": false
+      },
+      {
+        "text": "Uống vitamin để cải thiện sức khỏe thai nhi.",
+        "correct": false
+      },
+      {
+        "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
         "correct": false
       }
     ]
@@ -2164,6 +2191,33 @@
     ]
   },
   {
+    "title": "Béo phì, bệnh chồng bệnh",
+    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
+    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
+    "answers": [
+      {
+        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
+        "correct": true
+      },
+      {
+        "text": "Không ảnh hưởng gì đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ làm tăng cân mà không gây bệnh.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ làm đau lưng mà thôi.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
     "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
     "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
@@ -2190,33 +2244,6 @@
       },
       {
         "text": "Sốt xuất huyết",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Béo phì, bệnh chồng bệnh",
-    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
-    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
-    "answers": [
-      {
-        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
-        "correct": true
-      },
-      {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ làm tăng cân mà không gây bệnh.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ làm đau lưng mà thôi.",
         "correct": false
       }
     ]
