Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,64 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Khách hàng tố Baby Three nghi in 'đường lưỡi bò': Cục quản lý và phát triển thị trường kiểm tra",
+    "content": "Khách hàng đã tố cáo sản phẩm búp bê Baby Three có in hình đường lưỡi bò phi pháp, dẫn đến việc Cục Quản lý và Phát triển thị trường chỉ đạo kiểm tra sản phẩm này. Ông Trần Hữu Linh, cục trưởng cục, khẳng định mọi sản phẩm có hình ảnh đường lưỡi bò sẽ bị xử lý nghiêm theo quy định pháp luật. Trên mạng xã hội, người tiêu dùng đang kêu gọi tẩy chay sản phẩm này do những nghi vấn liên quan đến chủ quyền lãnh thổ Việt Nam.",
+    "link": "https://tuoitre.vn/khach-hang-to-baby-three-nghi-in-duong-luoi-bo-cuc-quan-ly-va-phat-trien-thi-truong-kiem-tra-2025031216132456.htm",
+    "cat": "phap-luat",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Có nghi vấn gì về búp bê Baby Three khiến Cục quản lý thị trường vào cuộc?",
+    "answers": [
+      {
+        "text": "Búp bê Baby Three bị nghi in hình đường lưỡi bò phi pháp",
+        "correct": true
+      },
+      {
+        "text": "Sản phẩm búp bê không có vấn đề gì",
+        "correct": false
+      },
+      {
+        "text": "Búp bê Baby Three bị thu hồi do chất lượng kém",
+        "correct": false
+      },
+      {
+        "text": "Búp bê Baby Three được sản xuất tại Việt Nam",
+        "correct": false
+      },
+      {
+        "text": "Búp bê Baby Three không được phép bán",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "\"Khó dỗ dành\" khuấy đảo màn ảnh, nam chính thăng hạng nhan sắc nhờ kiểu tóc",
+    "content": "Diễn viên Bạch Kính Đình, thủ vai Tang Diên trong phim \"Khó dỗ dành\", đã thu hút sự chú ý nhờ mái tóc mới giúp anh nâng cao nhan sắc. Kiểu tóc nhiều lớp không chỉ tôn lên đường nét khuôn mặt mà còn giúp anh thể hiện đúng phong cách của nhân vật. Trước khi phim ra mắt, nhiều khán giả hoài nghi về ngoại hình của Bạch Kính Đình, nhưng tạo hình hiện tại đã khiến họ thay đổi ý kiến.",
+    "link": "https://dantri.com.vn/giai-tri/kho-do-danh-khuay-dao-man-anh-nam-chinh-thang-hang-nhan-sac-nho-kieu-toc-20250312162046660.htm",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Mái tóc mới của Bạch Kính Đình đã giúp anh thay đổi điều gì trong phim \"Khó dỗ dành\"?",
+    "answers": [
+      {
+        "text": "Nâng cao nhan sắc và phong cách",
+        "correct": true
+      },
+      {
+        "text": "Giúp anh diễn tốt hơn",
+        "correct": false
+      },
+      {
+        "text": "Làm cho anh trở nên nổi tiếng hơn",
+        "correct": false
+      },
+      {
+        "text": "Khó khăn trong việc hóa thân vào nhân vật",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thủ tướng lập Ban chỉ đạo sắp xếp đơn vị hành chính các cấp",
     "content": "Thủ tướng Phạm Minh Chính đã thành lập Ban chỉ đạo sắp xếp tổ chức lại đơn vị hành chính các cấp, với Phó thủ tướng Nguyễn Hòa Bình làm Trưởng ban. Ban chỉ đạo sẽ nghiên cứu và chỉ đạo việc sắp xếp các đơn vị hành chính, đồng thời phối hợp giải quyết các vấn đề liên ngành liên quan. Bộ Nội vụ sẽ tham mưu và trình các luật sửa đổi cần thiết nhằm thực hiện việc sắp xếp này, đảm bảo tiến độ và chất lượng của đề án.",
     "link": "https://vnexpress.net/thu-tuong-lap-ban-chi-dao-sap-xep-don-vi-hanh-chinh-cac-cap-4860481.html",
@@ -1229,28 +1287,28 @@
     ]
   },
   {
-    "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
-    "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
-    "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
+    "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
+    "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
+    "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
     "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Những dưỡng chất nào dễ thiếu hụt gây rụng tóc?",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Làm thế nào để dự báo nguy cơ sinh non và giữ thai nhi khỏe mạnh?",
     "answers": [
       {
-        "text": "Sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12, magie",
+        "text": "Sử dụng xét nghiệm PartoSure để đánh giá nguy cơ sinh non.",
         "correct": true
       },
       {
-        "text": "Canxi, vitamin A, vitamin E",
+        "text": "Chỉ cần nghỉ ngơi nhiều hơn khi mang thai.",
         "correct": false
       },
       {
-        "text": "Chất xơ, omega-3, vitamin K",
+        "text": "Uống vitamin để cải thiện sức khỏe thai nhi.",
         "correct": false
       },
       {
-        "text": "Protein, selen, vitamin B9",
+        "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
         "correct": false
       }
     ]
@@ -1283,28 +1341,28 @@
     ]
   },
   {
-    "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
-    "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
-    "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
+    "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
+    "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
+    "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Làm thế nào để dự báo nguy cơ sinh non và giữ thai nhi khỏe mạnh?",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Những dưỡng chất nào dễ thiếu hụt gây rụng tóc?",
     "answers": [
       {
-        "text": "Sử dụng xét nghiệm PartoSure để đánh giá nguy cơ sinh non.",
+        "text": "Sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12, magie",
         "correct": true
       },
       {
-        "text": "Chỉ cần nghỉ ngơi nhiều hơn khi mang thai.",
+        "text": "Canxi, vitamin A, vitamin E",
         "correct": false
       },
       {
-        "text": "Uống vitamin để cải thiện sức khỏe thai nhi.",
+        "text": "Chất xơ, omega-3, vitamin K",
         "correct": false
       },
       {
-        "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
+        "text": "Protein, selen, vitamin B9",
         "correct": false
       }
     ]
@@ -2191,6 +2249,33 @@
     ]
   },
   {
+    "title": "Biến chứng nguy hiểm của viêm gan E",
+    "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
+    "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
+    "cat": "suc-khoe",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Viêm gan E có thể gây ra những biến chứng nào?",
+    "answers": [
+      {
+        "text": "Suy gan cấp và biến chứng thần kinh",
+        "correct": true
+      },
+      {
+        "text": "Chỉ gây triệu chứng nhẹ",
+        "correct": false
+      },
+      {
+        "text": "Không có biến chứng gì",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng đến gan mà thôi",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Béo phì, bệnh chồng bệnh",
     "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
     "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
@@ -2244,33 +2329,6 @@
       },
       {
         "text": "Sốt xuất huyết",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Biến chứng nguy hiểm của viêm gan E",
-    "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
-    "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
-    "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Viêm gan E có thể gây ra những biến chứng nào?",
-    "answers": [
-      {
-        "text": "Suy gan cấp và biến chứng thần kinh",
-        "correct": true
-      },
-      {
-        "text": "Chỉ gây triệu chứng nhẹ",
-        "correct": false
-      },
-      {
-        "text": "Không có biến chứng gì",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ảnh hưởng đến gan mà thôi",
         "correct": false
       }
     ]
@@ -2948,37 +3006,6 @@
     ]
   },
   {
-    "title": "Eco Retreat: Nơi trị liệu, phục hồi, tái tạo cho mọi thế hệ",
-    "content": "Eco Retreat là một khu đô thị rộng 220ha tại TP.HCM, được thiết kế để phục hồi, trị liệu cho tất cả các thế hệ từ trẻ nhỏ đến người cao tuổi. Nơi đây có nhiều không gian thiên nhiên với các khu vườn chủ đề, giúp cư dân phát triển toàn diện về cả thể chất và tâm lý. Eco Retreat không chỉ tạo ra một môi trường sống lành mạnh mà còn khuyến khích cư dân kết nối xã hội và khám phá bản thân thông qua các hoạt động ngoài trời.",
-    "link": "https://tuoitre.vn/eco-retreat-noi-tri-lieu-phuc-hoi-tai-tao-cho-moi-the-he-20250311200723989.htm",
-    "cat": "du-lich",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Eco Retreat có những lợi ích gì cho cư dân?",
-    "answers": [
-      {
-        "text": "Cung cấp không gian trị liệu và phục hồi cho mọi thế hệ",
-        "correct": true
-      },
-      {
-        "text": "Chỉ dành cho người lớn tuổi",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dành cho trẻ em",
-        "correct": false
-      },
-      {
-        "text": "Không có hoạt động ngoài trời",
-        "correct": false
-      },
-      {
-        "text": "Cung cấp dịch vụ mua sắm cao cấp",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sụt 14 kg trong 6 tháng do bệnh lupus ban đỏ",
     "content": "Bà Hòa, 66 tuổi, đã sụt 14 kg trong 6 tháng do mắc bệnh lupus ban đỏ, một bệnh tự miễn mạn tính. Sau khi nhập viện trong tình trạng suy kiệt và nhiễm trùng nặng, các bác sĩ đã xác định được nguyên nhân và tiến hành điều trị tích cực. Bệnh lupus ban đỏ thường biểu hiện với các triệu chứng như đau nhức, rụng tóc và dễ nhầm lẫn với các bệnh khác. Nếu không được điều trị kịp thời, bệnh có thể dẫn đến những biến chứng nghiêm trọng.",
     "link": "https://vnexpress.net/sut-14-kg-trong-6-thang-do-benh-lupus-ban-do-4860083.html",
@@ -3005,6 +3032,37 @@
       },
       {
         "text": "8 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Eco Retreat: Nơi trị liệu, phục hồi, tái tạo cho mọi thế hệ",
+    "content": "Eco Retreat là một khu đô thị rộng 220ha tại TP.HCM, được thiết kế để phục hồi, trị liệu cho tất cả các thế hệ từ trẻ nhỏ đến người cao tuổi. Nơi đây có nhiều không gian thiên nhiên với các khu vườn chủ đề, giúp cư dân phát triển toàn diện về cả thể chất và tâm lý. Eco Retreat không chỉ tạo ra một môi trường sống lành mạnh mà còn khuyến khích cư dân kết nối xã hội và khám phá bản thân thông qua các hoạt động ngoài trời.",
+    "link": "https://tuoitre.vn/eco-retreat-noi-tri-lieu-phuc-hoi-tai-tao-cho-moi-the-he-20250311200723989.htm",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Eco Retreat có những lợi ích gì cho cư dân?",
+    "answers": [
+      {
+        "text": "Cung cấp không gian trị liệu và phục hồi cho mọi thế hệ",
+        "correct": true
+      },
+      {
+        "text": "Chỉ dành cho người lớn tuổi",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dành cho trẻ em",
+        "correct": false
+      },
+      {
+        "text": "Không có hoạt động ngoài trời",
+        "correct": false
+      },
+      {
+        "text": "Cung cấp dịch vụ mua sắm cao cấp",
         "correct": false
       }
     ]
@@ -4431,91 +4489,6 @@
       },
       {
         "text": "Thay đổi lãnh đạo Cục Thuế",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thủ tướng chỉ đạo rà soát các sắc thuế với Mỹ, cân bằng cán cân thương mại",
-    "content": "Thủ tướng Phạm Minh Chính đã chỉ đạo Bộ Tài chính phối hợp với các cơ quan liên quan để rà soát các sắc thuế đang áp dụng với Mỹ nhằm cân bằng cán cân thương mại. Chỉ thị này được ban hành trong bối cảnh tình hình thương mại quốc tế phức tạp, với mục tiêu tăng trưởng kinh tế bền vững. Thủ tướng nhấn mạnh việc cần thúc đẩy hợp tác kinh tế với các đối tác lớn và kiểm soát nguồn gốc hàng hóa để giảm thiểu rủi ro về thuế quan.",
-    "link": "https://tuoitre.vn/thu-tuong-chi-dao-ra-soat-cac-sac-thue-voi-my-can-bang-can-can-thuong-mai-20250311171218899.htm",
-    "cat": "kinh-doanh",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Thủ tướng Việt Nam đã chỉ đạo thực hiện điều gì liên quan đến thuế với Mỹ?",
-    "answers": [
-      {
-        "text": "Rà soát các sắc thuế đang áp dụng với Mỹ",
-        "correct": true
-      },
-      {
-        "text": "Tăng thuế xuất khẩu sang Mỹ",
-        "correct": false
-      },
-      {
-        "text": "Giảm thuế nhập khẩu từ Mỹ",
-        "correct": false
-      },
-      {
-        "text": "Ngừng hợp tác thương mại với Mỹ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Lươn om riềng mẻ kiểu Bắc",
-    "content": "Món lươn om riềng mẻ kiểu Bắc mang đến hương vị đặc trưng với lươn mềm, thịt ngọt và mùi thơm từ riềng mẻ cùng mắm tôm. Món ăn này có thể kết hợp với bún hoặc cơm trắng, rất phù hợp trong tiết trời ẩm ướt của miền Bắc vào tháng 3. Cách chế biến bao gồm sơ chế lươn, ướp gia vị và nấu lươn với thịt ba chỉ cho đến khi chín mềm.",
-    "link": "https://vnexpress.net/doi-song-cooking-luon-om-rieng-me-kieu-bac-4859269.html",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Lươn om riềng mẻ kiểu Bắc có những đặc điểm gì nổi bật?",
-    "answers": [
-      {
-        "text": "Lươn mềm, thịt ngọt, dậy mùi riềng mẻ",
-        "correct": true
-      },
-      {
-        "text": "Lươn có vị chua và cay",
-        "correct": false
-      },
-      {
-        "text": "Món ăn không cần gia vị",
-        "correct": false
-      },
-      {
-        "text": "Lươn cứng và khô",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Độc đáo tục lệ chui qua kiệu Mẫu ở lễ hội TP Tuyên Quang",
-    "content": "Lễ hội đền Hạ, đền Thượng, và đền Ỷ La tại TP Tuyên Quang diễn ra từ ngày 9 đến 15 tháng 3, thu hút hàng nghìn người tham gia. Một đặc trưng độc đáo của lễ hội là tục lệ \"chui qua kiệu Mẫu\", nơi người dân xếp hàng chui qua gầm kiệu với hy vọng nhận được sức khỏe và hạnh phúc. Lễ hội không chỉ là dịp tưởng nhớ tổ tiên mà còn là nơi thể hiện bản sắc văn hóa dân gian, với nhiều hoạt động phong phú như lễ rước và múa lân.",
-    "link": "https://dantri.com.vn/giai-tri/doc-dao-tuc-le-chui-qua-kieu-mau-o-le-hoi-tp-tuyen-quang-20250311171106045.htm",
-    "cat": "du-lich",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Tục lệ nào được thực hiện trong lễ hội đền Hạ ở Tuyên Quang?",
-    "answers": [
-      {
-        "text": "Chui qua kiệu Mẫu",
-        "correct": true
-      },
-      {
-        "text": "Nhảy múa quanh đền",
-        "correct": false
-      },
-      {
-        "text": "Thả đèn trời",
-        "correct": false
-      },
-      {
-        "text": "Lễ dâng hương",
-        "correct": false
-      },
-      {
-        "text": "Thi ẩm thực",
         "correct": false
       }
     ]
